Updated deprecated methods